// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`General Error render correctly 1`] = `
<div>
  <header
    class="MuiPaper-root Header-root-2 Header-headersmall-4 Header-headermedium-5 Header-headerlarge-6 MuiPaper-elevation3"
  >
    <nav
      aria-label="Utilities"
      class="Header-utilitiesBar-7"
      role="navigation"
    >
      <div
        class="Container-root-43"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <ul>
            <li
              class="Header-navItem-8"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-text Button-text-46 Header-utilitiesButton-9 MuiButton-textPrimary"
                data-gtm="{\\"id\\":\\"nav-top-utilities-bar\\",\\"label\\":\\"string\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                href="https://www.external.co.uk"
                tabindex="0"
                target="_blank"
              >
                <span
                  class="MuiButton-label Button-label-48"
                >
                  string
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </li>
            <li
              class="Header-navItem-8"
            >
              <button
                aria-label="MC: menu.language"
                class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-text Button-text-46 Header-utilitiesButton-9 Header-languageSelectionButton-10 MuiButton-textPrimary"
                data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"open panel\\",\\"action\\":\\"open panel\\"}"
                data-testid="language-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-48"
                >
                  <img
                    alt="Norge"
                    class="Header-languageIcon-14"
                    height="16px"
                    src="/icons/flags/no.svg"
                    width="20px"
                  />
                  NO
                  <span
                    class="Header-downArrow-11"
                  >
                    ▾
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <div
      class="Header-drawer-15 Header-languageDrawer-16"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <button
        aria-label="MC: global.close"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-56 iconButton IconButton-medium-62 IconButton-contained-57 Header-closeButton-17"
        data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"close panel\\",\\"action\\":\\"close panel\\"}"
        data-testid="language-close-button"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Header-backNavigation-18"
      >
        <button
          class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-text Button-text-46 Navigation-navigationListButton-86 Header-backButton-19 MuiButton-textPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label Button-label-48"
          >
            <span
              class="MuiButton-startIcon Button-startIcon-49 MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root Header-chevronLeft-20"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </span>
            MC: menu.mainDefault
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <hr
          class="Header-separator-21"
        />
      </div>
      <div
        class="Container-root-43 Header-languageContainer-22"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <div
            class="LanguageSelection-root-89"
          >
            <div>
              <h6
                class="MuiTypography-root LanguageSelection-heading-90 Typography-root-95 MuiTypography-h6"
                data-testid="typography"
              >
                Europe
              </h6>
              <div
                class="MuiGrid-root LanguageSelection-container-91 MuiGrid-container MuiGrid-align-items-xs-center"
              >
                <div
                  class="MuiGrid-root LanguageSelection-item-92 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-text Button-text-46 Navigation-navigationListButton-86 LanguageSelection-link-93 MuiButton-textPrimary"
                    data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Albania\\",\\"action\\":\\"/al/\\"}"
                    href="/al"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-48"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-49 MuiButton-iconSizeMedium"
                      >
                        <img
                          class="LanguageSelection-languageIcon-94"
                          height="16px"
                          src="/icons/flags/al.svg"
                          width="20px"
                        />
                      </span>
                      Albania
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </div>
                <div
                  class="MuiGrid-root LanguageSelection-item-92 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-text Button-text-46 Navigation-navigationListButton-86 LanguageSelection-link-93 MuiButton-textPrimary"
                    data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Österreich\\",\\"action\\":\\"/at/\\"}"
                    href="/at"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-48"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-49 MuiButton-iconSizeMedium"
                      >
                        <img
                          class="LanguageSelection-languageIcon-94"
                          height="16px"
                          src="/icons/flags/at.svg"
                          width="20px"
                        />
                      </span>
                      Österreich
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </div>
                <div
                  class="MuiGrid-root LanguageSelection-item-92 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-text Button-text-46 Navigation-navigationListButton-86 LanguageSelection-link-93 MuiButton-textPrimary"
                    data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Norge\\",\\"action\\":\\"/no/\\"}"
                    href="/no"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-48"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-49 MuiButton-iconSizeMedium"
                      >
                        <img
                          class="LanguageSelection-languageIcon-94"
                          height="16px"
                          src="/icons/flags/no.svg"
                          width="20px"
                        />
                      </span>
                      Norge
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Header-navigationBar-23"
    >
      <div
        class="Container-root-43"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <div
            class="Header-navigationBarContent-24"
          >
            <a
              aria-label="MC: global.logoLabel"
              class="Header-logoLink-25"
              href="/no/"
            >
              <svg
                class="Header-logo-26"
              />
            </a>
            <nav
              aria-label="Navigation"
              class="Header-navigation-27"
              role="navigation"
            >
              <div
                class="MuiTabs-root"
              >
                <div
                  class="MuiTabs-scrollable"
                  style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                />
                <div
                  class="MuiTabs-scroller MuiTabs-scrollable"
                  style="margin-bottom: 0px;"
                >
                  <div
                    class="MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <a
                      aria-controls="tabpanel-undefined"
                      aria-disabled="false"
                      aria-selected="false"
                      class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Header-navItem-8 Header-navItemNoChildren-28"
                      data-gtm="{\\"id\\":\\"nav-main-menu\\"}"
                      href="https://www.external.co.uk"
                      id="tab-undefined"
                      role="tab"
                      tabindex="-1"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        string
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                  <span
                    class="PrivateTabIndicator-root-148 PrivateTabIndicator-colorSecondary-150 MuiTabs-indicator"
                    style="left: 0px; width: 0px;"
                  />
                </div>
              </div>
            </nav>
            <div
              class="Header-navigationBarButtons-30"
            >
              <button
                aria-label="MC: search.label"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root-56 iconButton IconButton-medium-62 IconButton-contained-57 Header-searchButton-32"
                data-testid="search-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="MC: menu.open"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root-56 iconButton IconButton-medium-62 IconButton-text-58 Header-burgerButton-34"
                data-testid="open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Header-backdrop-35"
      data-testid="backdrop"
      style="opacity: 0; visibility: hidden;"
    />
    <div
      class="Header-drawer-15 Header-navDrawer-36"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <button
        aria-label="MC: global.close"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-56 iconButton IconButton-medium-62 IconButton-contained-57 Header-closeButton-17"
        data-testid="nav-close-button"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <nav
        class="Navigation-root-65"
      >
        <div
          class="Navigation-navigationList-71 Navigation-offset0-66"
        >
          <ul>
            <li>
              <h6
                class="MuiTypography-root Navigation-mainMenuTitle-79 Typography-root-95 MuiTypography-h6"
                data-testid="typography"
              >
                MC: menu.mainTitle
              </h6>
            </li>
            <li>
              <a
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-text Button-text-46 Navigation-navigationListButton-86 MuiButton-textPrimary"
                data-gtm="{\\"id\\":\\"nav-main-menu\\",\\"label\\":\\"string\\"}"
                href="https://www.external.co.uk"
                tabindex="0"
                target="_blank"
              >
                <span
                  class="MuiButton-label Button-label-48"
                >
                  string
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </li>
            <ul
              class="Navigation-utilities-83"
            >
              <li>
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-text Button-text-46 Navigation-navigationListButton-86 MuiButton-textPrimary"
                  data-gtm="{\\"id\\":\\"nav-main-menu\\",\\"label\\":\\"string\\"}"
                  href="https://www.external.co.uk"
                  tabindex="0"
                >
                  <span
                    class="MuiButton-label Button-label-48"
                  >
                    string
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </li>
            </ul>
            <li>
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-text Button-text-46 Navigation-navigationListButton-86 MuiButton-textPrimary"
                data-gtm="{\\"id\\":\\"nav-main-menu\\",\\"label\\":\\"NO\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-48"
                >
                  <span
                    class="Navigation-languageButtonContent-84"
                  >
                    <img
                      alt="Norge"
                      class="Navigation-languageIcon-85"
                      height="16px"
                      src="/icons/flags/no.svg"
                      width="20px"
                    />
                    NO
                  </span>
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root Navigation-chevronRight-77"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
          </ul>
        </div>
      </nav>
    </div>
    <div
      class="Header-searchDrawerContainer-37"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <div
        class="Header-drawer-15 Header-searchDrawer-39"
      >
        <button
          aria-label="MC: global.close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-56 iconButton IconButton-medium-62 IconButton-contained-57 Header-closeButton-17"
          data-testid="search-close-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <h4
          class="MuiTypography-root Typography-root-95 MuiTypography-h4"
          data-testid="typography"
        >
          MC: search.title
        </h4>
      </div>
    </div>
  </header>
  <div
    class=""
    data-testid="brand-colors-provider"
  >
    <div
      class="PromoSection-root-115 Section-root-122 Section-white-126"
    >
      <div
        class="Container-root-43"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <div
            class="MuiGrid-root PromoSection-grid-121 MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-item-103 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
            >
              <div
                class="PromoSection-content-118"
              >
                <h2
                  class="MuiTypography-root PromoSection-title-116 Typography-root-95 Typography-underline-97 MuiTypography-h2"
                  data-testid="typography"
                >
                  errorGeneralTitle
                </h2>
                <h3
                  class="MuiTypography-root PromoSection-subtitle-117 Typography-root-95 MuiTypography-h3"
                  data-testid="typography"
                >
                  errorGeneralTitle
                </h3>
                <p
                  class="MuiTypography-root Typography-root-95 MuiTypography-body2 MuiTypography-gutterBottom"
                  data-testid="typography"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-103 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="HidePrint-root-1"
  >
    <div
      class="Footer-root-132"
      data-testid="footer"
    >
      <div
        class="Container-root-43"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root Grid-item-103 MuiGrid-item"
            >
              <h4
                class="MuiTypography-root Typography-root-95 MuiTypography-h4"
                data-testid="typography"
              >
                string
              </h4>
            </div>
          </div>
          <div
            class="Footer-secondaryNavigation-139"
          >
            <div
              class="Footer-logo-140"
            >
              <svg />
            </div>
            <ul
              class="Footer-list-138 Footer-listInline-141"
            >
              <li
                class="Footer-listItem-133"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-text Button-text-46 Button-textDarkBg-50 Footer-link-137 MuiButton-textPrimary"
                  data-gtm="{\\"id\\":\\"nav-footer1\\",\\"label\\":\\"string\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                  href="https://www.external.co.uk"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <span
                    class="MuiButton-label Button-label-48"
                  >
                    string
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </li>
              <li
                class="Footer-listItem-133"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-text Button-text-46 Button-textDarkBg-50 Footer-link-137 MuiButton-textPrimary"
                  data-gtm="{\\"id\\":\\"nav-footer1\\",\\"label\\":\\"MC: global.sitemap\\",\\"action\\":\\"/no/sitemap/\\"}"
                  href="/no/sitemap/"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiButton-label Button-label-48"
                  >
                    MC: global.sitemap
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </li>
            </ul>
            <div
              class="Footer-standardLogo-142"
            >
              <svg />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="BackToTop-root-144 BackToTop-hidden-145"
  >
    <button
      aria-hidden="true"
      aria-label="Back to the top"
      class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-contained Button-contained-47 BackToTop-button-146 MuiButton-containedPrimary"
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-48"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root BackToTop-icon-147"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
   
</div>
`;

exports[`General Error render correctly when errorGeneral is falsy 1`] = `
<div>
  <header
    class="MuiPaper-root Header-root-153 Header-headersmall-155 Header-headermedium-156 Header-headerlarge-157 MuiPaper-elevation3"
  >
    <nav
      aria-label="Utilities"
      class="Header-utilitiesBar-158"
      role="navigation"
    >
      <div
        class="Container-root-194"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <ul>
            <li
              class="Header-navItem-159"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-text Button-text-197 Header-utilitiesButton-160 MuiButton-textPrimary"
                data-gtm="{\\"id\\":\\"nav-top-utilities-bar\\",\\"label\\":\\"string\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                href="https://www.external.co.uk"
                tabindex="0"
                target="_blank"
              >
                <span
                  class="MuiButton-label Button-label-199"
                >
                  string
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </li>
            <li
              class="Header-navItem-159"
            >
              <button
                aria-label="MC: menu.language"
                class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-text Button-text-197 Header-utilitiesButton-160 Header-languageSelectionButton-161 MuiButton-textPrimary"
                data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"open panel\\",\\"action\\":\\"open panel\\"}"
                data-testid="language-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-199"
                >
                  <img
                    alt="Norge"
                    class="Header-languageIcon-165"
                    height="16px"
                    src="/icons/flags/no.svg"
                    width="20px"
                  />
                  NO
                  <span
                    class="Header-downArrow-162"
                  >
                    ▾
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <div
      class="Header-drawer-166 Header-languageDrawer-167"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <button
        aria-label="MC: global.close"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-207 iconButton IconButton-medium-213 IconButton-contained-208 Header-closeButton-168"
        data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"close panel\\",\\"action\\":\\"close panel\\"}"
        data-testid="language-close-button"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Header-backNavigation-169"
      >
        <button
          class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-text Button-text-197 Navigation-navigationListButton-237 Header-backButton-170 MuiButton-textPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label Button-label-199"
          >
            <span
              class="MuiButton-startIcon Button-startIcon-200 MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root Header-chevronLeft-171"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </span>
            MC: menu.mainDefault
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <hr
          class="Header-separator-172"
        />
      </div>
      <div
        class="Container-root-194 Header-languageContainer-173"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <div
            class="LanguageSelection-root-240"
          >
            <div>
              <h6
                class="MuiTypography-root LanguageSelection-heading-241 Typography-root-246 MuiTypography-h6"
                data-testid="typography"
              >
                Europe
              </h6>
              <div
                class="MuiGrid-root LanguageSelection-container-242 MuiGrid-container MuiGrid-align-items-xs-center"
              >
                <div
                  class="MuiGrid-root LanguageSelection-item-243 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-text Button-text-197 Navigation-navigationListButton-237 LanguageSelection-link-244 MuiButton-textPrimary"
                    data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Albania\\",\\"action\\":\\"/al/\\"}"
                    href="/al"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-199"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-200 MuiButton-iconSizeMedium"
                      >
                        <img
                          class="LanguageSelection-languageIcon-245"
                          height="16px"
                          src="/icons/flags/al.svg"
                          width="20px"
                        />
                      </span>
                      Albania
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </div>
                <div
                  class="MuiGrid-root LanguageSelection-item-243 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-text Button-text-197 Navigation-navigationListButton-237 LanguageSelection-link-244 MuiButton-textPrimary"
                    data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Österreich\\",\\"action\\":\\"/at/\\"}"
                    href="/at"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-199"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-200 MuiButton-iconSizeMedium"
                      >
                        <img
                          class="LanguageSelection-languageIcon-245"
                          height="16px"
                          src="/icons/flags/at.svg"
                          width="20px"
                        />
                      </span>
                      Österreich
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </div>
                <div
                  class="MuiGrid-root LanguageSelection-item-243 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-text Button-text-197 Navigation-navigationListButton-237 LanguageSelection-link-244 MuiButton-textPrimary"
                    data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Norge\\",\\"action\\":\\"/no/\\"}"
                    href="/no"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-199"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-200 MuiButton-iconSizeMedium"
                      >
                        <img
                          class="LanguageSelection-languageIcon-245"
                          height="16px"
                          src="/icons/flags/no.svg"
                          width="20px"
                        />
                      </span>
                      Norge
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Header-navigationBar-174"
    >
      <div
        class="Container-root-194"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <div
            class="Header-navigationBarContent-175"
          >
            <a
              aria-label="MC: global.logoLabel"
              class="Header-logoLink-176"
              href="/no/"
            >
              <svg
                class="Header-logo-177"
              />
            </a>
            <nav
              aria-label="Navigation"
              class="Header-navigation-178"
              role="navigation"
            >
              <div
                class="MuiTabs-root"
              >
                <div
                  class="MuiTabs-scrollable"
                  style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                />
                <div
                  class="MuiTabs-scroller MuiTabs-scrollable"
                  style="margin-bottom: 0px;"
                >
                  <div
                    class="MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <a
                      aria-controls="tabpanel-undefined"
                      aria-disabled="false"
                      aria-selected="false"
                      class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Header-navItem-159 Header-navItemNoChildren-179"
                      data-gtm="{\\"id\\":\\"nav-main-menu\\"}"
                      href="https://www.external.co.uk"
                      id="tab-undefined"
                      role="tab"
                      tabindex="-1"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        string
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                  <span
                    class="PrivateTabIndicator-root-299 PrivateTabIndicator-colorSecondary-301 MuiTabs-indicator"
                    style="left: 0px; width: 0px;"
                  />
                </div>
              </div>
            </nav>
            <div
              class="Header-navigationBarButtons-181"
            >
              <button
                aria-label="MC: search.label"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root-207 iconButton IconButton-medium-213 IconButton-contained-208 Header-searchButton-183"
                data-testid="search-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="MC: menu.open"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root-207 iconButton IconButton-medium-213 IconButton-text-209 Header-burgerButton-185"
                data-testid="open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Header-backdrop-186"
      data-testid="backdrop"
      style="opacity: 0; visibility: hidden;"
    />
    <div
      class="Header-drawer-166 Header-navDrawer-187"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <button
        aria-label="MC: global.close"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-207 iconButton IconButton-medium-213 IconButton-contained-208 Header-closeButton-168"
        data-testid="nav-close-button"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <nav
        class="Navigation-root-216"
      >
        <div
          class="Navigation-navigationList-222 Navigation-offset0-217"
        >
          <ul>
            <li>
              <h6
                class="MuiTypography-root Navigation-mainMenuTitle-230 Typography-root-246 MuiTypography-h6"
                data-testid="typography"
              >
                MC: menu.mainTitle
              </h6>
            </li>
            <li>
              <a
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-text Button-text-197 Navigation-navigationListButton-237 MuiButton-textPrimary"
                data-gtm="{\\"id\\":\\"nav-main-menu\\",\\"label\\":\\"string\\"}"
                href="https://www.external.co.uk"
                tabindex="0"
                target="_blank"
              >
                <span
                  class="MuiButton-label Button-label-199"
                >
                  string
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </li>
            <ul
              class="Navigation-utilities-234"
            >
              <li>
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-text Button-text-197 Navigation-navigationListButton-237 MuiButton-textPrimary"
                  data-gtm="{\\"id\\":\\"nav-main-menu\\",\\"label\\":\\"string\\"}"
                  href="https://www.external.co.uk"
                  tabindex="0"
                >
                  <span
                    class="MuiButton-label Button-label-199"
                  >
                    string
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </li>
            </ul>
            <li>
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-text Button-text-197 Navigation-navigationListButton-237 MuiButton-textPrimary"
                data-gtm="{\\"id\\":\\"nav-main-menu\\",\\"label\\":\\"NO\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-199"
                >
                  <span
                    class="Navigation-languageButtonContent-235"
                  >
                    <img
                      alt="Norge"
                      class="Navigation-languageIcon-236"
                      height="16px"
                      src="/icons/flags/no.svg"
                      width="20px"
                    />
                    NO
                  </span>
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root Navigation-chevronRight-228"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
          </ul>
        </div>
      </nav>
    </div>
    <div
      class="Header-searchDrawerContainer-188"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <div
        class="Header-drawer-166 Header-searchDrawer-190"
      >
        <button
          aria-label="MC: global.close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-207 iconButton IconButton-medium-213 IconButton-contained-208 Header-closeButton-168"
          data-testid="search-close-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <h4
          class="MuiTypography-root Typography-root-246 MuiTypography-h4"
          data-testid="typography"
        >
          MC: search.title
        </h4>
      </div>
    </div>
  </header>
  <div
    class=""
    data-testid="brand-colors-provider"
  >
    <div
      class="PromoSection-root-266 Section-root-273 Section-white-277"
    >
      <div
        class="Container-root-194"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <div
            class="MuiGrid-root PromoSection-grid-272 MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-item-254 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
            >
              <div
                class="PromoSection-content-269"
              >
                <h2
                  class="MuiTypography-root PromoSection-title-267 Typography-root-246 Typography-underline-248 MuiTypography-h2"
                  data-testid="typography"
                >
                  Error:General.title
                </h2>
                <h3
                  class="MuiTypography-root PromoSection-subtitle-268 Typography-root-246 MuiTypography-h3"
                  data-testid="typography"
                >
                  Error:General.title
                </h3>
                <p
                  class="MuiTypography-root Typography-root-246 MuiTypography-body2 MuiTypography-gutterBottom"
                  data-testid="typography"
                >
                  Error:General.subtitle
                </p>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-contained Button-contained-198 MuiButton-containedPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-199"
                  >
                    Error:General.cta.label
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-254 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="HidePrint-root-152"
  >
    <div
      class="Footer-root-283"
      data-testid="footer"
    >
      <div
        class="Container-root-194"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root Grid-item-254 MuiGrid-item"
            >
              <h4
                class="MuiTypography-root Typography-root-246 MuiTypography-h4"
                data-testid="typography"
              >
                string
              </h4>
            </div>
          </div>
          <div
            class="Footer-secondaryNavigation-290"
          >
            <div
              class="Footer-logo-291"
            >
              <svg />
            </div>
            <ul
              class="Footer-list-289 Footer-listInline-292"
            >
              <li
                class="Footer-listItem-284"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-text Button-text-197 Button-textDarkBg-201 Footer-link-288 MuiButton-textPrimary"
                  data-gtm="{\\"id\\":\\"nav-footer1\\",\\"label\\":\\"string\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                  href="https://www.external.co.uk"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <span
                    class="MuiButton-label Button-label-199"
                  >
                    string
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </li>
              <li
                class="Footer-listItem-284"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-text Button-text-197 Button-textDarkBg-201 Footer-link-288 MuiButton-textPrimary"
                  data-gtm="{\\"id\\":\\"nav-footer1\\",\\"label\\":\\"MC: global.sitemap\\",\\"action\\":\\"/no/sitemap/\\"}"
                  href="/no/sitemap/"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiButton-label Button-label-199"
                  >
                    MC: global.sitemap
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </li>
            </ul>
            <div
              class="Footer-standardLogo-293"
            >
              <svg />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="BackToTop-root-295 BackToTop-hidden-296"
  >
    <button
      aria-hidden="true"
      aria-label="Back to the top"
      class="MuiButtonBase-root MuiButton-root Button-root-196 MuiButton-contained Button-contained-198 BackToTop-button-297 MuiButton-containedPrimary"
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-199"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root BackToTop-icon-298"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
   
</div>
`;
